# Ciencia-Datos

./: .gitignore  .pre-commit-config.yaml  PrimerFile  PrimerFile.ipynb  README.md  main.py  pyproject.toml  tarea_01_pandas_ingestion.ipynb  tarea_sql_pandas_academia.ipynb
Tareas -Ceneida-Durango-S/01-python/: tarea_01_python_numpy.ipynb  tarea_02_python.ipynb  tarea_03_python.ipynb
Tareas -Ceneida-Durango-S/02-pandas/: tarea_01_pandas_ingestion.ipynb  tarea_02_pandas_ingestion.ipynb
Tareas -Ceneida-Durango-S/03-visualizacion/: tarea_03_data_processing.ipynb  tarea_03_visualizacion.ipynb  tarea_sql_pandas_academia (3).ipynb
