[project]
name = "proyectos-ciencia-datos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "numpy>=2.4.4",
    "pandas>=3.0.2",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "ipykernel>=7.2.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]
